pom little changes