@@ -166,6 +166,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>${failsafe.version}</version>
+				<configuration>
+					<argLine>
+						--add-opens java.base/java.util=ALL-UNNAMED
+					</argLine>
+				</configuration>
 				<executions>
 					<execution>
 						<id>integration-tests</id>
